# TP_fil_rouge

./: Yotta_TP1_REA.ipynb  processed_data  processed_data_v1  pyproject.toml
.ipynb_checkpoints/: Yotta_TP1_REA-checkpoint.ipynb
data/: second_dataset.parquet
output/: processed_data.csv
