[tool.poetry]
name = "tp_pythonadvanced_alessio_rea"
version = "0.1.0"
description = ""
authors = ["alessio rea <alexei.80@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
